--- a/ShopApp.WebUI/Views/Admin/CreateProduct.cshtml
+++ b/ShopApp.WebUI/Views/Admin/CreateProduct.cshtml
@@ -5,34 +5,49 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@section Scripts{ 
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
+}
+
 <h2>CreateProduct</h2>
 <hr />
 
 <div class="row">
     <div class="col-md-8">
+        @if (ViewBag.ErrorMessage != null)
+        {
+            <div class="text-danger">@ViewBag.ErrorMessage</div>
+        }
+
         <form asp-controller="Admin" asp-action="CreateProduct" method="post">
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group row">
                 <label asp-for="Name" class="col-md-2 col-form-label"></label>
                 <div class="col-md-10">
-                    <input asp-for="Name" value="" class="form-control" />
+                    <input asp-for="Name" value="@Model.Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <label asp-for="ImageUrl" class="col-md-2 col-form-label"></label>
                 <div class="col-md-10">
-                    <input asp-for="ImageUrl" value="" class="form-control" />
+                    <input asp-for="ImageUrl" value="@Model.ImageUrl" class="form-control" />
+                    <span asp-validation-for="ImageUrl" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <label asp-for="Description" class="col-md-2 col-form-label"></label>
                 <div class="col-md-10">
-                    <textarea asp-for="Description" id="editor" class="form-control" name="Description"></textarea>
+                    <textarea asp-for="Description" id="editor" class="form-control" name="Description">@Model.Description</textarea>
+                    <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <label asp-for="Price" class="col-md-2 col-form-label"></label>
                 <div class="col-md-10">
-                    <input asp-for="Price" value="" class="form-control" />
+                    <input asp-for="Price" value="@Model.Price" class="form-control" />
+                    <span asp-validation-for="Price" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
